# dreamnet

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/dreamnet/: __init__.py  cli.py  models.py  report.py
src/dreamnet/analyzer/: comparator.py  dream_theory.py  hallucination.py
tests/: test_benchmark.py  test_core.py  test_dreamnet.py  test_integration.py
